# init_attrs_with_kwargs

./: README-pypi.md  README.md  sample1.py  sample2.py  sample3.py  setup.cfg
.github/workflows/: tests.yaml
init_attrs_with_kwargs/: __init__.py
tests/: test_init_attrs_with_func.py  test_init_attrs_with_kwargs.py  test_run_with_docopt.py
