[metadata]
name = init_attrs_with_kwargs
version = 0.1.8
description = A helper for type-checked command-line argument store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/init_attrs_with_kwargs
author = Toshihiro kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    License :: Public Domain
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
python_requires = >= 3.8

[tox:tox]
envlist = py38, py39, py310

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
deps =
    borb
commands =
    python -m unittest discover
